--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/akashwadode/Booking.com-Clone---React-Project-1---bwev6kz22ewr.git",
   "name": "react-18",
   "version": "1.0.0",
   "description": "React 18 template",
@@ -22,9 +23,12 @@
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
+    "gh-pages": "^6.1.0",
     "typescript": "4.1.3"
   },
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "cypress run  --headless --reporter mochawesome",
