--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://github.com/akashwadode/Booking.com-Clone---React-Project-1---bwev6kz22ewr.git",
   "name": "react-18",
   "version": "1.0.0",
   "description": "React 18 template",
@@ -17,6 +16,7 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.0"
@@ -27,8 +27,6 @@
     "typescript": "4.1.3"
   },
   "scripts": {
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "cypress run  --headless --reporter mochawesome",
